2012-03-22  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (expo): New function.

	* eval.c (eval_init): expo registered as intrinsic exp.

	* lib.h (expo): Declared.

	* txr.1: Added to stub heading.

	* txr.vim: Highlighting for exp.

2012-03-22  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (transform_op): use integerp instead of numberp.
	Not all numbers are integers now, and that situation
	requires an integer.

2012-03-22  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Bugfix: was not allowing e-notation floats
	with no decimal point like 1E1.

	* stream.c: (vformat): Keep track of whether or not precision was
	given in precision_p local variable.
	When printing #<bad-float> pass a precision of 0
	to vformat_str, not precision, since precision does not apply.
	In ~f and ~e, if the precision was not given, default
	it to 3.
	Restructured float printing in ~a and ~s. It now just uses sprintf's %g
	with a precision. If user does not specify precision, it defaults
	to DBL_DIG to print the number with reasonable accuracy.
	A .0 is added if it sprintf produces an integer, and the conversion
	is ~s rather than ~a.

2012-03-22  Kaz Kylheku  <kaz@kylheku.com>

	Fix sqrt confusion. There must be a separate isqrt
	for the integer square root.

	* arith.c (sqroot_fixnum): Renamed back to isqrt_fixnum.
	(sqroot): Rewritten to handle only floating-point square root.
	(isqrt): New function, based on previous sqroot,
	handles only integers.

	* eval.c (eval_init): New intrinsic, isqrt.

	* lib.h (isqrt): New declaration.

	* txr.1: Doc stubs.

	* txr.vim: Highlighting for isqrt.

2012-03-22  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (floorf, ceili, sine, cosi, atang, loga): New functions.

	* eval.c (eval_init): New intrinsic functions registered:
	floor, ceil, sin, cons, atan, log.

	* lib.h (floorf, ceili, sine, cosi, atang, loga): Declared.

	* txr.1: Doc stub section for new functions.

	* txr.vim: Highighting added.

2012-03-22  Kaz Kylheku  <kaz@kylheku.com>
