@@ -109,7 +109,7 @@ tests/008/tokenize.ok: TXR_ARGS := $(top_srcdir)/tests/008/data
 tests/008/configfile.ok: TXR_ARGS := $(top_srcdir)/tests/008/configfile
 tests/008/students.ok: TXR_ARGS := $(top_srcdir)/tests/008/students.xml
 tests/008/soundex.ok: TXR_ARGS := soundex sowndex lloyd lee jackson robert
-tests/009/json.ok: TXR_ARGS := $(top_srcdir)/tests/009/webapp.json
+tests/009/json.ok: TXR_ARGS = $(addprefix $(top_srcdir)/tests/009/,webapp.json pass1.json)
 tests/009/json.ok: TXR_OPTS := -l
 tests/010/align-columns.ok: TXR_ARGS := $(top_srcdir)/tests/010/align-columns.dat
 
