@@ -1,2 +1,8 @@
-(v "O" ((("S" "web-app") ("O" ((("S" "servlet") ("A" (("O" ((("S" "servlet-name") ("S" "cofaxCDS")) (("S" "servlet-class") ("S" "org.cofax.cds.CDSServlet")) (("S" "init-param") ("O" ((("S" "configGlossary:installationAt") ("S" "Philadelphia, PA")) (("S" "configGlossary:adminEmail") ("S" "ksm@pobox.com")) (("S" "configGlossary:poweredBy") ("S" "Cofax")) (("S" "configGlossary:poweredByIcon") ("S" "/images/cofax.gif")) (("S" "configGlossary:staticPath") ("S" "/content/static")) (("S" "templateProcessorClass") ("S" "org.cofax.WysiwygTemplate")) (("S" "templateLoaderClass") ("S" "org.cofax.FilesTemplateLoader")) (("S" "templatePath") ("S" "templates")) (("S" "templateOverridePath") ("S" "")) (("S" "defaultListTemplate") ("S" "listTemplate.htm")) (("S" "defaultFileTemplate") ("S" "articleTemplate.htm")) (("S" "useJSP") ("K" "false")) (("S" "jspListTemplate") ("S" "listTemplate.jsp")) (("S" "jspFileTemplate") ("S" "articleTemplate.jsp")) (("S" "cachePackageTagsTrack") ("N" "200")) (("S" "cachePackageTagsStore") ("N" "200")) (("S" "cachePackageTagsRefresh") ("N" "60")) (("S" "cacheTemplatesTrack") ("N" "100")) (("S" "cacheTemplatesStore") ("N" "50")) (("S" "cacheTemplatesRefresh") ("N" "15")) (("S" "cachePagesTrack") ("N" "200")) (("S" "cachePagesStore") ("N" "100")) (("S" "cachePagesRefresh") ("N" "10")) (("S" "cachePagesDirtyRead") ("N" "10")) (("S" "searchEngineListTemplate") ("S" "forSearchEnginesList.htm")) (("S" "searchEngineFileTemplate") ("S" "forSearchEngines.htm")) (("S" "searchEngineRobotsDb") ("S" "WEB-INF/robots.db")) (("S" "useDataStore") ("K" "true")) (("S" "dataStoreClass") ("S" "org.cofax.SqlDataStore")) (("S" "redirectionClass") ("S" "org.cofax.SqlRedirection")) (("S" "dataStoreName") ("S" "cofax")) (("S" "dataStoreDriver") ("S" "com.microsoft.jdbc.sqlserver.SQLServerDriver")) (("S" "dataStoreUrl") ("S" "jdbc:microsoft:sqlserver://LOCALHOST:1433;DatabaseName=goon")) (("S" "dataStoreUser") ("S" "sa")) (("S" "dataStorePassword") ("S" "dataStoreTestQuery")) (("S" "dataStoreTestQuery") ("S" "SET NOCOUNT ON;select test='test';")) (("S" "dataStoreLogFile") ("S" "/usr/local/tomcat/logs/datastore.log")) (("S" "dataStoreInitConns") ("N" "10")) (("S" "dataStoreMaxConns") ("N" "100")) (("S" "dataStoreConnUsageLimit") ("N" "100")) (("S" "dataStoreLogLevel") ("S" "debug")) (("S" "maxUrlLength") ("N" "500"))))))) ("O" ((("S" "servlet-name") ("S" "cofaxEmail")) (("S" "servlet-class") ("S" "org.cofax.cds.EmailServlet")) (("S" "init-param") ("O" ((("S" "mailHost") ("S" "mail1")) (("S" "mailHostOverride") ("S" "mail2"))))))) ("O" ((("S" "servlet-name") ("S" "cofaxAdmin")) (("S" "servlet-class") ("S" "org.cofax.cds.AdminServlet")))) ("O" ((("S" "servlet-name") ("S" "fileServlet")) (("S" "servlet-class") ("S" "org.cofax.cds.FileServlet")))) ("O" ((("S" "servlet-name") ("S" "cofaxTools")) (("S" "servlet-class") ("S" "org.cofax.cms.CofaxToolsServlet")) (("S" "init-param") ("O" ((("S" "templatePath") ("S" "toolstemplates/")) (("S" "log") ("N" "1")) (("S" "logLocation") ("S" "/usr/local/tomcat/logs/CofaxTools.log")) (("S" "logMaxSize") ("S" "")) (("S" "dataLog") ("N" "1")) (("S" "dataLogLocation") ("S" "/usr/local/tomcat/logs/dataLog.log")) (("S" "dataLogMaxSize") ("S" "")) (("S" "removePageCache") ("S" "/content/admin/remove?cache=pages&id=")) (("S" "removeTemplateCache") ("S" "/content/admin/remove?cache=templates&id=")) (("S" "fileTransferFolder") ("S" "/usr/local/tomcat/webapps/content/fileTransferFolder")) (("S" "lookInContext") ("N" "1")) (("S" "adminGroupID") ("N" "4")) (("S" "betaServer") ("K" "true")))))))))) (("S" "servlet-mapping") ("O" ((("S" "cofaxCDS") ("S" "/")) (("S" "cofaxEmail") ("S" "/cofaxutil/aemail/*")) (("S" "cofaxAdmin") ("S" "/admin/*")) (("S" "fileServlet") ("S" "/static/*")) (("S" "cofaxTools") ("S" "/tools/*"))))) (("S" "taglib") ("O" ((("S" "taglib-uri") ("S" "cofax.tld")) (("S" "taglib-location") ("S" "/WEB-INF/tlds/cofax.tld"))))))))))
-(badsyntax . "")
+AST: #H((:equal-based) ("web-app" #H((:equal-based) ("servlet-mapping" #H((:equal-based) ("cofaxTools" "/tools/*") ("cofaxCDS" "/") ("cofaxAdmin" "/admin/*") ("cofaxEmail" "/cofaxutil/aemail/*") ("fileServlet" "/static/*"))) ("servlet" #(#H((:equal-based) ("servlet-class" "org.cofax.cds.CDSServlet") ("init-param" #H((:equal-based) ("defaultFileTemplate" "articleTemplate.htm") ("configGlossary:installationAt" "Philadelphia, PA") ("templateOverridePath" "") ("dataStoreLogLevel" "debug") ("searchEngineListTemplate" "forSearchEnginesList.htm") ("dataStoreClass" "org.cofax.SqlDataStore") ("configGlossary:poweredBy" "Cofax") ("jspFileTemplate" "articleTemplate.jsp") ("cacheTemplatesTrack" 100.0) ("cacheTemplatesStore" 50.0) ("templateProcessorClass" "org.cofax.WysiwygTemplate") ("dataStoreUser" "sa") ("redirectionClass" "org.cofax.SqlRedirection") ("dataStoreConnUsageLimit" 100.0) ("dataStoreMaxConns" 100.0) ("jspListTemplate" "listTemplate.jsp") ("useJSP" :false) ("configGlossary:poweredByIcon" "/images/cofax.gif") ("templateLoaderClass" "org.cofax.FilesTemplateLoader") ("cacheTemplatesRefresh" 15.0) ("cachePagesDirtyRead" 10.0) ("searchEngineRobotsDb" "WEB-INF/robots.db") ("cachePagesStore" 100.0) ("dataStoreTestQuery" "SET NOCOUNT ON;select test='test';") ("configGlossary:adminEmail" "ksm@pobox.com") ("configGlossary:staticPath" "/content/static") ("dataStoreInitConns" 10.0) ("cachePagesTrack" 200.0) ("dataStorePassword" "dataStoreTestQuery") ("defaultListTemplate" "listTemplate.htm") ("dataStoreLogFile" "/usr/local/tomcat/logs/datastore.log") ("maxUrlLength" 500.0) ("dataStoreDriver" "com.microsoft.jdbc.sqlserver.SQLServerDriver") ("dataStoreName" "cofax") ("cachePackageTagsRefresh" 60.0) ("templatePath" "templates") ("dataStoreUrl" "jdbc:microsoft:sqlserver://LOCALHOST:1433;DatabaseName=goon") ("useDataStore" :true) ("cachePackageTagsTrack" 200.0) ("searchEngineFileTemplate" "forSearchEngines.htm") ("cachePackageTagsStore" 200.0) ("cachePagesRefresh" 10.0))) ("servlet-name" "cofaxCDS")) #H((:equal-based) ("servlet-class" "org.cofax.cds.EmailServlet") ("init-param" #H((:equal-based) ("mailHost" "mail1") ("mailHostOverride" "mail2"))) ("servlet-name" "cofaxEmail")) #H((:equal-based) ("servlet-class" "org.cofax.cds.AdminServlet") ("servlet-name" "cofaxAdmin")) #H((:equal-based) ("servlet-class" "org.cofax.cds.FileServlet") ("servlet-name" "fileServlet")) #H((:equal-based) ("servlet-class" "org.cofax.cms.CofaxToolsServlet") ("init-param" #H((:equal-based) ("lookInContext" 1.0) ("removePageCache" "/content/admin/remove?cache=pages&id=") ("logMaxSize" "") ("dataLogMaxSize" "") ("removeTemplateCache" "/content/admin/remove?cache=templates&id=") ("dataLog" 1.0) ("logLocation" "/usr/local/tomcat/logs/CofaxTools.log") ("log" 1.0) ("adminGroupID" 4.0) ("templatePath" "toolstemplates/") ("betaServer" :true) ("dataLogLocation" "/usr/local/tomcat/logs/dataLog.log") ("fileTransferFolder" "/usr/local/tomcat/webapps/content/fileTransferFolder"))) ("servlet-name" "cofaxTools")))) ("taglib" #H((:equal-based) ("taglib-uri" "cofax.tld") ("taglib-location" "/WEB-INF/tlds/cofax.tld"))))))
+
+Unmatched junk: ""
+
+AST: #("JSON Test Pattern pass1" #H((:equal-based) ("object with 1 member" #("array with 1 element"))) #H((:equal-based)) #() -42.0 :true :false :null #H((:equal-based) ("" 2.3456789012e+76) ("digit" "0123456789") ("\\/\\\\\"쫾몾ꮘﳞ볚\b\f\n\r\t`1~!@#$%^&*()_+-=[]{}|;:',./<>?" "A key can be any string") ("null" :null) ("one" 1.0) ("E" 1.23456789e+34) ("special" "`1~!@#$%^&*()_+-={':[,]}|;.</>?") ("e" 1.23456789e-13) ("comment" "// /* <!-- --") ("# -- --> */" " ") ("real" -9876.54321) ("backslash" "\\\\") ("array" #()) ("url" "http://www.JSON.org/") ("zero" 0.0) ("false" :false) ("space" " ") ("slash" "/ & \\/") ("address" "50 St. James Street") ("compact" #(1.0 2.0 3.0 4.0 5.0 6.0 7.0)) ("object" #H((:equal-based))) ("quote" "\"") ("jsontext" "{\"object with 1 member\":[\"array with 1 element\"]}") ("true" :true) ("integer" 1234567890.0) ("ALPHA" "ABCDEFGHIJKLMNOPQRSTUVWYZ") ("quotes" "&#34; \" %22 0x22 034 &#x22;") ("hex" "ģ䕧覫췯ꯍ") ("0123456789" "digit") ("controls" "\b\f\n\r\t") ("alpha" "abcdefghijklmnopqrstuvwyz") (" s p a c e d " #(1.0 2.0 3.0 4.0 5.0 6.0 7.0))) 0.5 98.6 99.44 1066.0 10.0 1.0 0.1 1.0 2.0 2.0 "rosebud")
+
+Unmatched junk: ""
+
